--- a/environments/Vagrantfile
+++ b/environments/Vagrantfile
@@ -25,9 +25,9 @@ Vagrant.configure("2") do |config|
     # within the machine from a port on the host machine. In the example below,
     # accessing "localhost:8080" will access port 80 on the guest machine.
     # NOTE: This will enable public access to the opened port
-   config.vm.network "forwarded_port", guest: 8080, host: 8080
-   config.vm.network "forwarded_port", guest: 8000, host: 80
-   config.vm.network "forwarded_port", guest: 5000, host: 5000
+   config.vm.network "forwarded_port", guest: 8080, host: 8081
+   config.vm.network "forwarded_port", guest: 8000, host: 8000
+   config.vm.network "forwarded_port", guest: 5000, host: 8083
     
    
     # Create a forwarded port mapping which allows access to a specific port
@@ -87,6 +87,8 @@ Vagrant.configure("2") do |config|
     curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
     
     sudo apt-get update && sudo apt-get install google-cloud-sdk -y
+
+    sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 1
     
     sudo apt-get install google-cloud-sdk-app-engine-python -y
     sudo apt-get install google-cloud-sdk-app-engine-python-extras -y
@@ -103,6 +105,8 @@ Vagrant.configure("2") do |config|
     sudo apt-get install build-essential libssl-dev libffi-dev python-dev -y
     sudo apt install gettext -y
     
-    sudo ln -s /usr/bin/python3 /usr/bin/python
+    if [ ! -L /usr/bin/python ]; then
+      sudo ln -s /usr/bin/python3 /usr/bin/python
+    fi
         SHELL
 end
